Spacing fixes, more advanced settings groundwork

--- a/css/settings.css
+++ b/css/settings.css
@@ -20,7 +20,7 @@ label{float:left;}
 #controllerGraphic{float:right;position:relative;right:250px;top:50px;}
 #controllerGraphic div{height:32px;line-height:16px;position:absolute;width:250px;z-index:-1;}
 #controllerPic{position:relative;top:5px;}
-#extendedControls{background-color:#14234a;border:1px solid #000;border-top:0;display:none;height:260px;left:-1px;position:absolute;top:429px;width:1205px;}
+#extendedControls{background-color:#14234a;border:1px solid #000;border-top:0;display:none;height:260px;left:-1px;position:absolute;top:435px;width:1205px;}
 #expandCollapse{background-color:#14234a;border:1px solid #000;bottom:-10px;color:#FFF;font-size:14pt;height:24px;left:540px;letter-spacing:3px;padding-left:22px;padding-right:20px;position:absolute;}
 #advanced{display:none;width:620px;}
 .setting{float:right;font-size:13pt;height:22px;margin-right:20px;margin-top:2px;position:absolute;right:0;width:250px;}
